# ecsl

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.zig  build.zig.zon  ecslvm  shell.nix
bundle/: Cargo.toml  build.rs
bundle/src/: Bundle.toml  cli.rs  compile.rs  main.ecsl  main.rs  new.rs
ecsl_assembler/: Cargo.toml
ecsl_assembler/src/: header.rs  lib.rs  linker.rs
ecsl_ast/: Cargo.toml
ecsl_ast/src/: attributes.rs  callable.rs  data.rs  ecs.rs  expr.rs  item.rs  lib.rs  op.rs  path.rs  stmt.rs  ty.rs  visit.rs
ecsl_ast_derive/: Cargo.toml
ecsl_ast_derive/src/: lib.rs
ecsl_ast_pass/: Cargo.toml
ecsl_ast_pass/src/: byt.rs  casing.rs  definitions.rs  entry_point.rs  fn_validator.rs  import_collector.rs  lib.rs
ecsl_ast_validation/: Cargo.toml
ecsl_ast_validation/src/: asm.rs  attributes.rs  casing.rs  definitions.rs  exports.rs  fn_validator.rs  fnvalidator.rs  import_collector.rs  imports.rs  lib.rs  locals.rs  prelude.rs  ty_check.rs
ecsl_bytecode/: Cargo.toml
ecsl_bytecode/src/: ext.rs  function.rs  lib.rs
ecsl_bytecode_derive/: Cargo.toml
ecsl_bytecode_derive/src/: lib.rs
ecsl_codegen/: Cargo.toml
ecsl_codegen/src/: bp_promotion.rs  codegen.rs  inline.rs  lib.rs  noop.rs  pass.rs
ecsl_config/: Cargo.toml
ecsl_config/src/: lib.rs  package.rs
ecsl_context/: Cargo.toml
ecsl_context/src/: bundle_toml.rs  config.rs  lib.rs  package.rs  source_tree.rs
ecsl_diagnostic/: Cargo.toml
ecsl_diagnostic/src/: lib.rs
ecsl_diagnostics/: Cargo.toml
ecsl_diagnostics/src/: lib.rs
ecsl_driver/: Cargo.toml
ecsl_driver/src/: lib.rs
ecsl_error/: Cargo.toml
ecsl_error/src/: ext.rs  lib.rs  snippet.rs
ecsl_gir/: Cargo.toml
ecsl_gir/src/: cons.rs  expr.rs  lib.rs  stmt.rs  term.rs  visit.rs
ecsl_gir_pass/: Cargo.toml
ecsl_gir_pass/src/: block_order.rs  comp_ids.rs  const_eval.rs  dead_block.rs  function_graph.rs  lib.rs  linker.rs  mono.rs  mutability.rs  return_path.rs
ecsl_imports/: Cargo.toml
ecsl_imports/src/: lib.rs
ecsl_index/: Cargo.toml
ecsl_index/src/: lib.rs
ecsl_lexer/: Cargo.toml
ecsl_lexer/src/: lib.rs  stream.rs  token.rs
ecsl_parse/: Cargo.toml  build.rs
ecsl_parse/src/: ecsl.l  ecsl.y  lib.rs  source.rs  table.rs
ecsl_source/: Cargo.toml
ecsl_source/src/: lib.rs  lines.rs  pos.rs  span.rs
ecsl_span/: Cargo.toml
ecsl_span/src/: index.rs  lib.rs
ecsl_std/: Bundle.toml
ecsl_std/src/: bool.ecsl  char.ecsl  entity.ecsl  fmt.ecsl  lib.ecsl  num.ecsl  option.ecsl  panic.ecsl  query.ecsl  rand.ecsl  resource.ecsl  string.ecsl  vec.ecsl
ecsl_test_runner/: Cargo.toml
ecsl_test_runner/src/: main.rs
ecsl_tests/: array.ecsl  assignment.ecsl  bool.ecsl  comments.ecsl  entity_components.ecsl  entity_limit.ecsl  entity_tag.ecsl  enums.ecsl  expr.ecsl  fib.ecsl  fn.ecsl  for_loop.ecsl  generic_fn.ecsl  generic_struct.ecsl  generics.ecsl  if.ecsl  member_fn.ecsl  num.ecsl  ref.ecsl  resources.ecsl  sort.ecsl  static_fn.ecsl  string.ecsl  structs.ecsl  while.ecsl
ecsl_tests/src/: enums.ecsl  fib.ecsl  for_loop.ecsl  generics.ecsl  structs.ecsl
ecsl_ty/: Cargo.toml
ecsl_ty/src/: assoc.rs  ctxt.rs  def.rs  import.rs  lib.rs  local.rs  mono.rs  ty.rs
ecsl_ty_check/: Cargo.toml
ecsl_ty_check/src/: ext.rs  for_loop.rs  lib.rs  ty_check.rs
ecsl_vm/: build.zig  common.c  common.h  error_handle.c  error_handle.h  header.c  header.h  main.c  vm.c  vm.h
ecsl_vm/src/: header.zig  instruction.zig  main.zig  opcode.zig  runtime_ffi.zig  tests.zig  thread.zig  vm.zig
ecsl_vm/src/ecs/: archetype.zig  component.zig  entity.zig  query.zig  schedule.zig  storage.zig  world.zig
example/: Bundle.toml  out.ecsb
example/src/: main.ecsl
examples/aabb/: Bundle.toml
examples/aabb/src/: main.ecsl
examples/bubble_sort/: Bundle.toml
examples/bubble_sort/src/: main.ecsl
examples/nqueens/: Bundle.toml
examples/nqueens/src/: main.ecsl
