[workspace]
members = [
    "bundle",
    "ecsl_bytecode",
    "ecsl_config",
    "ecsl_context",
    "ecsl_diagnostics",
    "ecsl_driver",
    "ecsl_error",
    "ecsl_ast",
    "ecsl_ast_derive",
    "ecsl_ast_validation",
    "ecsl_index",
    "ecsl_parse",
    "ecsl_assembler",
    "ecsl_imports",
    "ecsl_lexer",
    ]

resolver = "1"

[workspace.dependencies]
cfgrammar = { git = "https://github.com/softdevteam/grmtools" }
lrlex = { git = "https://github.com/softdevteam/grmtools" }
lrpar = { git = "https://github.com/softdevteam/grmtools" }
