[workspace]
members = [
    "bundle",
    "ecsl_bytecode",
    "ecsl_context",
    "ecsl_diagnostics",
    "ecsl_driver",
    "ecsl_error",
    "ecsl_ast",
    "ecsl_ast_derive",
    "ecsl_ast_pass",
    "ecsl_index",
    "ecsl_parse",
    "ecsl_assembler",
    "ecsl_lexer",
    "ecsl_ty",
    "ecsl_lexer",
    "ecsl_bytecode_derive",
    "ecsl_ty_check",
    "ecsl_gir",
    "ecsl_gir_pass",
    "ecsl_codegen",
    ]

resolver = "1"

[workspace.dependencies]
log = "0.4.25"
cfgrammar = { git = "https://github.com/softdevteam/grmtools" }
lrlex = { git = "https://github.com/softdevteam/grmtools" }
lrpar = { git = "https://github.com/softdevteam/grmtools" }
