[package]
name = "bundle"
version = "0.1.0"
edition = "2021"

[dependencies]
ecsl_driver = { path = "../ecsl_driver"}
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive", "string"] }
env_logger = "0.11.6"
log.workspace = true
homedir = "0.3.4"

[build-dependencies]
homedir = "0.3.4"
copy_dir = "0.1.3"