[package]
name = "ecsl_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
ecsl_ty = { path = "../ecsl_ty" }
ecsl_gir = { path = "../ecsl_gir" }
ecsl_gir_pass = { path = "../ecsl_gir_pass" }
ecsl_bytecode = { path = "../ecsl_bytecode" }
ecsl_index = { path = "../ecsl_index" }
log.workspace = true