[package]
name = "ecsl_context"
version = "0.1.0"
edition = "2021"

[dependencies]
ecsl_error = { path = "../ecsl_error" }
ecsl_index = { path = "../ecsl_index" }
ecsl_config = { path = "../ecsl_config"}
ecsl_diagnostics = { path = "../ecsl_diagnostics"}
ecsl_parse = { path = "../ecsl_parse" }
glob = "0.3.1"
