[package]
name = "ecsl_context"
version = "0.1.0"
edition = "2021"

[dependencies]
ecsl_error = { path = "../ecsl_error" }
ecsl_index = { path = "../ecsl_index" }
ecsl_diagnostics = { path = "../ecsl_diagnostics"}
ecsl_parse = { path = "../ecsl_parse" }
glob = "0.3.1"
petgraph = "0.6.5"
serde = { version = "1.0.207", features = ["derive"] }
toml = "0.8.19"
bimap = "0.6.3"
log.workspace = true
rayon = { version = "1.10.0", optional = true}

[features]
parallel = ["dep:rayon"]