[package]
name = "ecsl_parse"
version = "0.1.0"
edition = "2021"

[dependencies]
ecsl_diagnostics = { path = "../ecsl_diagnostics" }
ecsl_index = { path = "../ecsl_index" }
ecsl_source = { path = "../ecsl_source" }
ecsl_ast = { path = "../ecsl_ast" }
cfgrammar.workspace = true
lrlex.workspace = true
lrpar.workspace = true

[build-dependencies]
cfgrammar.workspace = true
lrlex.workspace = true
lrpar.workspace = true
