[package]
name = "ecsl_ty"
version = "0.1.0"
edition = "2021"

[dependencies]
ecsl_ast = { path = "../ecsl_ast" }
ecsl_error = { path = "../ecsl_error" }
ecsl_index = { path = "../ecsl_index" }
ecsl_parse = { path = "../ecsl_parse" }
ecsl_diagnostics = { path = "../ecsl_diagnostics" }
ecsl_context = { path = "../ecsl_context" }
cfgrammar.workspace = true